# soku-swarm-syncer

./: Cargo.toml  README.md  build.rs  git_config_test.md  resources.rc
.cargo/: config.toml
src/: app.manifest  main.rs
